variables and functions examples

--- a/index.html
+++ b/index.html
@@ -13,16 +13,26 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>My Project</title>
+    <title>Name Tag</title>
 </head>
 
 <body>
     <header>
-        <h1>My Project</h1>
+        <h1>My Name Tag</h1>
+        <h1>Another Name Tag</h1>
     </header>
 
     <main>
+        <section>
+            Name: <input>
+            <button>Update</button>
+        </section>
 
+        <section class="name-tag">
+            <p class="greeting">Hello</p>
+            <p>my name is</p>
+            <p class="name-display">Vicky</p>
+        </section>
     </main>
 
 </body>
