the name tag updates based on the name input

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
     <main>
         <section>
-            Name: <input>
-            <button>Update</button>
+            Name: <input id="input" />
+            <button id="update">Update</button>
         </section>
 
         <section class="name-tag">
             <p class="greeting">Hello</p>
             <p>my name is</p>
-            <p class="name-display">Vicky</p>
+            <p id="name" class="name-display">Vicky</p>
         </section>
     </main>
 
